# AVR

./: .gitignore  .gitmodules  readme.md
RTOS/: CMakeLists.txt  FreeRTOSConfig.h  main.c  uart.c
blinky/: Makefile  blink_led.c  timer.c  uart.c
